<resources>
    <string name="app_name">Online Calendar</string>
    <string name="btn_new_activity">New Activity</string>
    <string name="btn_get_http">Get Camels</string>

    <string name="action_settings">On progress</string>
    <string name="title_feature1">Feature 1</string>
    <string name="calendar">Calendar</string>
    <string name="priorities">Priorities</string>
    <string name="display_all_events">Display Events</string>
    <string name="display_all_tasks">Display Tasks</string>
    <string name="display_all_notes">Display Notes</string>
    <string name="display_all_reminders">Display Reminders</string>
    <string name="dashboard">DashBoard</string>
    <string name="create_event">Create Event</string>
    <string name="create_task">Create Task</string>
    <string name="create_note">Create Note</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="update_partially">Update Partially</string>
    <string name="update_entirely">Update Entirely</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="importance">Importance</string>
    <string name="finish_date">Finish Date</string>
    <string name="start_date">Start date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="id">_id</string>
    <string name="remove_all_tasks">Remove all Tasks</string>
    <string name="delete_event">Delete Event</string>
    <string name="reminder_detail">Reminder Detail</string>
    <string name="add">+</string>
    <string name="exit">x</string>
    <string name="topic">Topic</string>
    <string name="date">Date</string>
    <string name="min">Min</string>
    <string name="parent_id">Parent _id:</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="deadline">Deadline</string>
    <string name="delete_task">Delete Task</string>
    <string name="moment">Moment</string>
    <string name="remind_min">Remind min</string>
    <string name="description">Description</string>

</resources>
