<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#c7c4c3"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/entityIDCrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@+id/exitView"
        android:background="#008000"
        android:text="@string/id"
        android:layout_marginTop="0dp"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/entityTitleCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entityIDCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/title"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editTitleCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/entityIDCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEventTitleCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/Hdivider"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/entityDescriptionCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entityTitleCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/description"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editDescrCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/entityTitleCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEventDescrCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/entityStartDCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entityDescriptionCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/start_date"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editStartCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/entityDescriptionCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEventStartCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/entityFinishDCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entityStartDCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/finish_date"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editFinishCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/entityStartDCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEventFinishCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/entityImportanceCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entityFinishDCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/importance"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editImportCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/entityFinishDCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEventImportCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/addEventReminderCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#519730"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/entityImportanceCrt"
        android:text="@string/add_reminder"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:onClick="addEventReminder"/>

    <Button
        android:id="@+id/putEventCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#006400"
        android:layout_toStartOf="@+id/deleteEvent"
        android:layout_below="@+id/addEventReminderCrt"
        android:text="@string/update_entirely"
        android:textAllCaps="false"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:onClick="putEvent"/>

    <Button
        android:id="@+id/patchEventCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#483d8b"
        android:layout_toEndOf="@+id/deleteEvent"
        android:text="@string/update_partially"
        android:layout_below="@+id/addEventReminderCrt"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textAllCaps="false"
        android:visibility="visible"
        android:onClick="patchEvent"/>

    <Button
        android:id="@+id/deleteEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="#FF0000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/addEventReminderCrt"
        android:layout_marginTop="5dp"
        android:text="@string/delete_event"
        android:textAllCaps="false"
        android:visibility="visible"
        android:onClick="deleteEvent"/>

    <Button
        android:id="@+id/exitView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#FF0000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/exit"
        android:textAllCaps="true"
        android:visibility="visible"
        android:onClick="dismissView"/>
    </RelativeLayout>
</ScrollView>