<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#c7c4c3"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/remindIDCrt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@+id/exitView"
        android:background="#008000"
        android:text="@string/id"
        android:layout_marginTop="0dp"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/remindTitleCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remindIDCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/topic"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editTitleCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/remindIDCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editRemindTitleCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/Hdivider"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/remindMomentCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remindTitleCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/date"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editMomentCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/remindTitleCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editRemindMomentCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/remindMinutesCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remindMomentCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/min"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editMinutesCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/remindMomentCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editRemindMinutesCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""/>
    </android.support.design.widget.TextInputLayout>

    
    <TextView
        android:id="@+id/remindImportanceCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remindMinutesCrt"
        android:layout_toStartOf="@+id/Hdivider"
        android:text="@string/importance"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/editImportCrt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Hdivider"
        android:layout_below="@+id/remindMinutesCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editRemindImportCrt"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint=""/>
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/reminderFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remindImportanceCrt"
        android:layout_alignParentStart="true"
        android:text="@string/parent_id"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/editReminderFor"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/reminderFor"
        android:layout_below="@+id/remindImportanceCrt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTReminderFor"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint=""/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/remindPutCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#006400"
        android:layout_toStartOf="@+id/deleteReminder"
        android:layout_below="@+id/editReminderFor"
        android:text="@string/update_entirely"
        android:textAllCaps="false"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:onClick="putReminder"/>

    <Button
        android:id="@+id/remindPatchCrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#483d8b"
        android:layout_toEndOf="@+id/deleteReminder"
        android:text="@string/update_partially"
        android:layout_below="@+id/editReminderFor"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textAllCaps="false"
        android:visibility="visible"
        android:onClick="patchReminder"/>

    <Button
        android:id="@+id/deleteReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="#FF0000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editReminderFor"
        android:layout_marginTop="10dp"
        android:text="@string/delete_reminder"
        android:textAllCaps="false"
        android:visibility="visible"
        android:onClick="deleteReminder"/>

    <Button
        android:id="@+id/exitView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="#FF0000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/exit"
        android:textAllCaps="true"
        android:visibility="visible"
        android:onClick="dismissView"/>
    </RelativeLayout>
</ScrollView>